<resources>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_screenshot">Screenshot</string>
    <string name="toolbar_settings">Settings</string>

    <string name="app_name">Choice Picker</string>

    <string name="new_question">New question</string>
    <string name="questions_list_title">Questions Available</string>
    <string name="choices_list_title">Choices Available</string>

    <string name="delete">delete</string>
    <string name="edit">edit</string>

    <string name="question_hint">Question</string>
    <string name="question_empty">Question field cannot be empty.</string>
    <string name="add_to_choices">New Choice</string>
    <string name="choices_empty">Enter some choices.</string>
    <string name="button_add">Add</string>
    <string name="button_choose">Choose</string>

    <string name="back">Back</string>
    <string name="again">Again</string>
    <string name="new_text">New</string>
</resources>
