<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chinodelmundo.choicepicker.ChooseActivity">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/bottomLayout">

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/textViewChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Answer"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_below="@+id/textViewQuestion"
            android:paddingTop="16dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/buttonMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/again"
            android:src="@drawable/ic_refresh"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:onClick="onClickAgain"
            android:background="@drawable/border" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/buttonMiddle"
            android:layout_toStartOf="@id/buttonMiddle"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:onClick="onClickPreviousActivity"
            android:background="@drawable/border" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/buttonMiddle"
            android:layout_toEndOf="@+id/buttonMiddle"
            android:contentDescription="@string/new_text"
            android:src="@drawable/ic_new"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:onClick="onClickNewQuestion"
            android:background="@drawable/border" />

    </RelativeLayout>
</RelativeLayout>
