<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/mainCoordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chinodelmundo.choicepicker.QuestionDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:textColorHint="@color/hintColor">

                <EditText
                    android:id="@+id/etQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/question_hint"
                    android:nextFocusUp="@id/etQuestion"
                    android:nextFocusLeft="@id/etQuestion"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnAddChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/layoutQuestion"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:onClick="addNewChoice"
                android:text="@string/button_add" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutChoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@id/btnAddChoice"
                android:layout_toStartOf="@id/btnAddChoice"
                android:layout_below="@id/layoutQuestion"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:textColorHint="@color/hintColor">

                <EditText
                    android:id="@+id/etNewChoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_to_choices" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="chooseItem"
                android:text="@string/button_choose"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/layoutChoice"
                android:layout_centerHorizontal="true"
                android:background="@color/buttoncolor"
                android:textColor="@color/textColor" />

            <ListView
                android:layout_marginBottom="?attr/actionBarSize"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/lvChoices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnChoose"
                android:layout_marginTop="8dp"
                android:dividerHeight="1dp" />

        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
